# apl-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md  install.sh
.agents/skills/apl-cli-release/: SKILL.md
.github/workflows/: release.yml
prompts/: SKILL.md
skills/apl-cli/: SKILL.md
skills/apl-cli/references/: profiles.md  setup.md
src/: cli.rs  client.rs  commands.rs  config.rs  main.rs  models.rs  output.rs  upgrade.rs
