[package]
name = "apl-cli"
version = "0.3.1"
edition = "2021"
description = "Apollo Configuration Center CLI for AI-assisted development"
license = "MIT"
repository = "https://github.com/AruNi-01/apl-cli"

[[bin]]
name = "apl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
dialoguer = "0.11"
governor = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"

[profile.release]
strip = true
lto = true
opt-level = "z"
